prometheus/prom_service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
